# Movies123forMe

./: .gitattributes  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Pillow-9.4.0-cp311-cp311-win_amd64.whl  Procfile  README.md  clf.pkl  commit.py  commit.sh  config.toml  contourpy-1.0.7-cp311-cp311-win_amd64.whl  df.csv  dtc_model.sav  et_model.sav  excel_formulas.txt  fonttools-4.39.2-py3-none-any.whl  kiwisolver-1.4.4-cp311-cp311-win_amd64.whl  logreg_model.sav  lr_model.sav  main.py  main_dashboard.md  main_dashboard.py  merged_data.csv  movie_clean.csv  movie_search.csv  package.json  plots.html  predict.csv  pyproject.toml  req.txt  requirements.txt  response.json  rf_model.sav  setup.sh  svm_model.sav  train.pkl
.github/PULL_REQUEST_TEMPLATE/: pull_requests.md
.github/workflows/: pylint.yml  python-app.yml  python-publish.yml  testing.yml
Scripts/: activate  activate.bat
img/: hulu.csv
movie_data/: .gitattributes
movie_data/hulu/archive/: hulu_titles.csv
movie_data/imdb/: imdb_exp.md
movie_data/imdb/name.basics.tsv/: data.tsv
movie_data/imdb/title.akas.tsv/: data.tsv
movie_data/imdb/title.episode.tsv/: data.tsv
movie_data/imdb/title.ratings.tsv/: data.tsv
movie_data/netflix/archive/: netflix_titles.csv
pages/: B_etl.py  C_analysis.py  D_analysis_upload.py  E_regressions.py  F_machine_texting.py  G_machine_learning.py  SmartStoplist.txt  analysis.py  analysis_upload.py  clean_data.py  machine_learning.py  regressions.py  response.json
pages/function_folder/: A_data_loading.py  F_machine_texting.py  functions.py  merge.py  recommend.py  recommend_movies.py  text_classification.py
src/: data_cleaning.py  data_loading.py  etl.py  excel_formulas.txt  machine_learning.py  main.py  merged_data.csv  movie_clean.csv  movie_reviewer.py  movie_search.csv  pdf_generator.py  queries.py  query_scraping.py  regressions.py  response.json  streamlit_setup.py  webscraper.py
src/movie_data/: .gitattributes
src/pages/: 02_etl.py  03_analysis.py  04_analysis_upload.py  05_regressions.py  06_machine_texting.py  07_machine_learning.py  09_movie_enthusiasts_form.py  A_data_loading.py  B_etl.py  C_analysis.py  D_analysis_upload.py  E_regressions.py  F_machine_texting.py  G_machine_learning.py  H_movie_enthusiasts_form.py  merge.py  upload_recommend.py
src/pages/functions/: B_etl.py  (+5 more)
src/working_files/: analysis.py  data_loading.py  data_normalization.py  etl.py  machine_learning.py  machine_texting.py  ml_model.py  model.py  movie_enthusiasts_form.py  movie_search.csv  regressions.py  stats.py  text_analysis.py  text_classification.py
writing/: comp_log.txt
(+43 files in other folders)
