[tool.poetry]
name = "Movies123ForMe"
version = "0.1.0"
description = "description"
authors = ["Adriana Solis <solisa@allegheny.edu>"]
license = "MIT"
readme = "README.md"
include = [ "LICENSE", ]
packages = [ { include = "src" }, ]

[tool.poetry.scripts]
movies = "src.machine_learning:cli"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
typer = "^0.6.1"
rich = "^12.6.0"
streamlit = "^1.13.0"
shap = "^0.41.0"
matplotlib = "^3.6.1"
plotly = "^5.10.0"
sklearn = "^0.0.post1"
llvmlite = "^0.39.1"
seaborn = "^0.12.2"
pdfkit = "^1.0.0"
jinja2 = "^3.1.2"
fpdf = "^1.7.2"
statsmodels = "^0.13.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"