[tool.poetry]
name = "movies123forme"
version = "0.1.0"
description = ""
authors = ["Adriana Solis <solis.adriana986@gmail.com>"]
license = "MIT"
readme = "README.md"
include = [ "LICENSE", ]
packages = [ { include = "pages" }, ]

[tool.poetry.scripts]
movies123forme = "main:interface"

[tool.poetry.dependencies]
python = "^3.11"
statsmodels = "^0.13.5"
inotify = "^0.2.10"
altair = "^4.2.2"
attrs = "^22.2.0"
blinker = "^1.5"
cachetools = "^5.3.0"
streamlit = "^1.20.0"
pandas = "^1.5.3"
numpy = "^1.24.2"
joblib = "^1.2.0"
requests = "^2.28.2"
pathlib = "^1.0.1"
nltk = "^3.8.1"
seaborn = "^0.12.2"
plotly = "^5.13.1"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
